# GRITS_2025

./: README.md  exercises.md  processor.py  processor_commented.py  simple_funcs.py
students/: README.md  pyproject.toml  students.db
students/src/student_db/: __init__.py  cli.py  db.py
students/tests/: test_student_db.py
